src/css/footer.css
/* @media only screen and (min-width: 1200px) {
  .menu-container {
    display: none;
  }
} */

.footer-section {
  padding: 32px 0;
  color: var(--white);
  background-color: var(--dark-violet);
}
.footer-container {
  display: flex;
  flex-direction: column;
  /* gap: 32px; */
  font-weight: 500;
  line-height: 1.14;
  letter-spacing: -0.02em;
}
@media only screen and (min-width: 768px) {
  .footer-section {
    padding: 50px 0;
  }
}
.footer-upperblock {
  display: flex;
  gap: 32px;
  flex-direction: column;
  margin-bottom: 32px;
}
@media only screen and (min-width: 768px) {
  .footer-upperblock {
    flex-direction: row;
    justify-content: space-between;
    margin-bottom: 54px;
  }
}

@media only screen and (min-width: 1200px) {
  .footer-upperblock {
    margin-bottom: 62px;
  }
}
.footer-title {
  max-width: 300px;
  font-weight: 500;
  font-size: 24px;
  line-height: 1.17;
}

@media only screen and (min-width: 768px) {
  .footer-title {
    font-size: 28px;
    line-height: 1.21;
  }
}
.footer-title-accent {
  color: var(--orange);
}
.footer-all-contacts {
  display: flex;
  justify-content: space-between;
  /* row-gap: 32px; */
}
@media only screen and (min-width: 768px) {
  .footer-all-contacts {
    max-width: 280px;
    display: flex;
    gap: 52px;
    justify-content: space-between;
    flex-direction: row;
  }
}
@media only screen and (min-width: 1200px) {
  .footer-all-contacts {
    gap: 65px;
  }
}
.footer-contacts {
  font-style: normal;
  font-weight: 400;
  line-height: 1.29;
}
.footer-contacts-info {
  margin-bottom: 14px;
  font-weight: 500;
}
.footer-contacts-list {
  display: flex;
  flex-direction: column;
  justify-content: center;
  /* align-items: center; */
}
.footer-contacts-item {
}
.footer-socials-box {
}
.footer-socials-list {
  display: flex;
  gap: 14px;
  flex-direction: row;
}

@media only screen and (min-width: 768px) {
  .footer-socials-list {
    gap: 18px;
  }
}

.footer-socials-item {
  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
}
.footer-socials-icons {
  fill: var(--white);
  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
}
.footer-socials-icons:hover,
.footer-socials-icons:active {
  fill: var(--orange);
}
.footer-line {
  border: 1px solid rgba(255, 255, 255, 0.1);
  /* transform: rotate(180deg); */
  margin-bottom: 32px;
}
@media only screen and (min-width: 768px) {
  .footer-line {
    margin-bottom: 24px;
  }
}
.footer-menu {
}
.footer-menu-list {
  display: flex;
  flex-direction: column;
  gap: 14px;
}
@media only screen and (min-width: 768px) {
  .footer-menu-list {
    flex-direction: row;
    gap: 24px;
  }
}
.footer-menu-item:hover,
.footer-menu-item:active,
.footer-contacts-item:hover,
.footer-contacts-item:active {
  color: var(--orange);
}

